apps/clusters/feathre-core/monitoring/opencost/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: opencost
spec:
  parentRefs:
    - name: eg
      namespace: envoy
      sectionName: https
  hostnames:
    - opencost.apps.onelite.feather
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: opencost
          port: 9090
